--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </a>
 
             <!-- CARD 2: CAPITÁN AMÉRICA -->
-            <a href="#" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <a href="capitan_america.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/0078FF/ffffff?text=CAPIT%C3%81N+AM%C3%89RICA" 
                      alt="Capitán América" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
