--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </a>
 
             <!-- CARD 3: BLACK WIDOW -->
-            <a href="#" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <a href="black_widow.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/000000/ffffff?text=BLACK+WIDOW" 
                      alt="Black Widow" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
