--- a/index.html
+++ b/index.html
@@ -98,6 +98,53 @@
                 </div>
             </a>
             
+             <!-- CARD 1: IRON MAN -->
+            <a href="marvel_wiki_template.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                     alt="Iron Man" 
+                     class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                     onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+                <div class="p-4">
+                    <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Iron Man</h2>
+                    <p class="text-gray-500 text-sm mt-1">Anthony Edward Stark, El Vengador de Hierro.</p>
+                </div>
+            </a>
+
+             <!-- CARD 1: IRON MAN -->
+            <a href="marvel_wiki_template.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                     alt="Iron Man" 
+                     class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                     onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+                <div class="p-4">
+                    <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Iron Man</h2>
+                    <p class="text-gray-500 text-sm mt-1">Anthony Edward Stark, El Vengador de Hierro.</p>
+                </div>
+            </a>
+
+             <!-- CARD 1: IRON MAN -->
+            <a href="marvel_wiki_template.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                     alt="Iron Man" 
+                     class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                     onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+                <div class="p-4">
+                    <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Iron Man</h2>
+                    <p class="text-gray-500 text-sm mt-1">Anthony Edward Stark, El Vengador de Hierro.</p>
+                </div>
+            </a>
+
+             <!-- CARD 1: IRON MAN -->
+            <a href="marvel_wiki_template.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                     alt="Iron Man" 
+                     class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                     onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+                <div class="p-4">
+                    <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Iron Man</h2>
+                    <p class="text-gray-500 text-sm mt-1">Anthony Edward Stark, El Vengador de Hierro.</p>
+                </div>
+            </a>
         </div>
 
     </main>
