--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!-- CARD 3: BLACK WIDOW -->
             <a href="black_panter.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/000000/ffffff?text=BLACK+WIDOW" 
-                     alt="Black Widow" 
+                     alt="Black Panter" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -101,7 +101,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="spiderman.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Spiderman" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -113,7 +113,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="hulk.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Hulk" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -125,7 +125,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="thor.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Thor" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -139,7 +139,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="cuatro_fantasticos.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Los Cuatro Fantásticos" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -151,7 +151,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="guardianes_galaxia.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Los Guardianes de la Galaxia" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -163,7 +163,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="xmen.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Los X-men" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -177,7 +177,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="loki.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Loki" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -189,7 +189,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="thanos.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Thanos" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
@@ -201,7 +201,7 @@
              <!-- CARD 1: IRON MAN -->
             <a href="magneto.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
                 <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
-                     alt="Iron Man" 
+                     alt="Magneto" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
                 <div class="p-4">
