--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- CARD 1: IRON MAN -->
             <a href="ironman.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/toni.jpg" 
                      alt="Iron Man" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -76,7 +76,7 @@
 
             <!-- CARD 2: CAPITÁN AMÉRICA -->
             <a href="capitan_america.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/0078FF/ffffff?text=CAPIT%C3%81N+AM%C3%89RICA" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/capitan.jpg" 
                      alt="Capitán América" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -88,7 +88,7 @@
 
             <!-- CARD 3: BLACK WIDOW -->
             <a href="black_panter.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/000000/ffffff?text=BLACK+WIDOW" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/pantera.jpg" 
                      alt="Black Panter" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -100,7 +100,7 @@
             
              <!-- CARD 1: IRON MAN -->
             <a href="spiderman.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/spider.jpg" 
                      alt="Spiderman" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -112,7 +112,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="hulk.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/hulk.jpg" 
                      alt="Hulk" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -124,7 +124,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="thor.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/thor.jpg" 
                      alt="Thor" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -133,10 +133,9 @@
                     <p class="text-gray-500 text-sm mt-1">Anthony Edward Stark, El Vengador de Hierro.</p>
                 </div>
             </a>
-        </div>
              <!-- CARD 1: IRON MAN -->
             <a href="cuatro_fantasticos.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/cuatrofantasticos.jpg" 
                      alt="Los Cuatro Fantásticos" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -148,7 +147,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="guardianes_galaxia.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/guardianes.jpg" 
                      alt="Los Guardianes de la Galaxia" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -160,7 +159,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="xmen.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/xmen.jpg" 
                      alt="Los X-men" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -171,7 +170,7 @@
             </a>
              <!-- CARD 1: IRON MAN -->
             <a href="loki.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/loki.jpg" 
                      alt="Loki" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -183,7 +182,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="thanos.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/thanos.jpg" 
                      alt="Thanos" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -195,7 +194,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="magneto.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://placehold.co/600x400/ED1D24/ffffff?text=IRON+MAN" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/magneto.jpg" 
                      alt="Magneto" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
