--- a/ironman.html
+++ b/ironman.html
@@ -109,7 +109,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="placeholder-ironman.jpg" alt="Imagen de Iron Man">
+            <img src="placeholder-ironman.jpg" alt="https://i.pinimg.com/736x/3e/e9/46/3ee946b27fd1cc5eb0b485e4a0669534.jpg">
             <p><strong>Nombre Real:</strong> Anthony "Tony" Stark</p>
             <p><strong>Estatus:</strong> Héroe, Fundador de Los Vengadores</p>
             <p><strong>Ocupación:</strong> Genio, Millonario, PlayBoy, Filántropo, Ingeniero</p>
