Cambio de imagenes + update de Index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="xmen.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/xmen.png" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/xmen.jpg" 
                      alt="Los X-men" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -182,7 +182,6 @@
 
              <!-- CARD 1: IRON MAN -->
             <a href="thanos.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="" 
                 <img src="https://lulo08.github.io/Pag.LJ/img/thanos.jpg"
                      alt="Thanos" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
