--- a/ironman.html
+++ b/ironman.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iron Man - Wiki Marvel</title>
     <style>
+        .clear {
+    clear: both; /* Fuerza a que el contenido se coloque debajo de elementos flotantes a la izquierda o derecha */
+    height: 0;
+}
         /* Estilos CSS integrados */
         body {
             font-family: 'Arial', sans-serif;
@@ -141,6 +145,9 @@
             </ul>
 
             <h3>Modelos Notables de Armadura (Mark):</h3>
+            
+            <div class="clear"></div>
+
             <ul class="armaduras">
                 <li>Mark I: La armadura original, tosca y funcional, construida en cautiverio.</li>
                 <li>Mark III: El primer traje clásico rojo y dorado.</li>
