--- a/ironman.html
+++ b/ironman.html
@@ -124,25 +124,31 @@
         <section>
             <h2>Introducción</h2>
             <p>
-                *Iron Man, alter ego de **Anthony Edward "Tony" Stark*, es un genio inventor y magnate de la industria que utiliza trajes de armadura motorizados de alta tecnología de su propia invención. Después de ser herido y capturado en una zona de guerra, Tony crea una armadura para salvar su vida y escapar, decidiendo usar su tecnología y riqueza para proteger al mundo como Iron Man.
+                Iron Man, alter ego de Anthony Edward "Tony" Stark, es un genio inventor y magnate de la industria que utiliza trajes de armadura motorizados de alta tecnología de su propia invención. Después de ser herido y capturado en una zona de guerra, Tony crea una armadura para salvar su vida y escapar, decidiendo usar su tecnología y riqueza para proteger al mundo como Iron Man.
             </p>
             <p>
-                Es uno de los miembros fundadores de *Los Vengadores* y su intelecto rivaliza con el de las mentes más brillantes del Universo Marvel. Su evolución personal, desde un industrialista irresponsable hasta un héroe abnegado, es un pilar central de su historia.
+                Es uno de los miembros fundadores de Los Vengadores y su intelecto rivaliza con el de las mentes más brillantes del Universo Marvel. Su evolución personal, desde un industrialista irresponsable hasta un héroe abnegado, es un pilar central de su historia.
             </p>
         </section>
 
         <section>
             <h2>Armadura y Poderes</h2>
             <p>
-                La principal fuente de poder de Iron Man es su armadura, que le otorga fuerza sobrehumana, vuelo y una amplia gama de armamento. El corazón de muchas de sus armaduras es el *Reactor Arc*, que le proporciona energía.
+                La principal fuente de poder de Iron Man es su armadura, que le otorga fuerza sobrehumana, vuelo y una amplia gama de armamento. El corazón de muchas de sus armaduras es el Reactor Arc, que le proporciona energía.
             </p>
             
             <h3>Armamento Principal:</h3>
             <ul>
-                <li>*Rayos Repulsores:* Proyectiles de energía concentrada disparados desde las palmas de las manos.</li>
-                <li>*Unirrayo (Unibeam):* Un potente rayo de energía lanzado desde el pecho de la armadura.</li>
-                <li>*Vuelo:* Propulsión a través de botas y guantes a velocidades supersónicas.</li>
+                <li>Rayos Repulsores: Proyectiles de energía concentrada disparados desde las palmas de las manos.</li>
+                <li>Unirrayo (Unibeam): Un potente rayo de energía lanzado desde el pecho de la armadura.</li>
+                <li>Vuelo: Propulsión a través de botas y guantes a velocidades supersónicas.</li>
             </ul>
+
+
+            <h2>DATO CURIOSO</h2>
+            <p>Stan Lee creó a Iron Man como un desafío personal.
+
+Quería crear un héroe que, en teoría, sería detestado por los jóvenes lectores de la década de 1960 (pleno apogeo de la Guerra Fría) por ser un multimillonario, fabricante de armas y militarista. El desafío era obligar a la gente a que lo quisiera a pesar de todo, y lo logró al darle un corazón herido, un lado vulnerable y un gran ingenio.</p>
 
             
             <div class="clear"></div>
@@ -159,7 +165,7 @@
         <section>
             <h2>Trayectoria y Legado</h2>
             <p>
-                Iron Man ha desempeñado roles cruciales en numerosos eventos, incluyendo la *Guerra Civil* de Marvel, donde lideró el lado a favor del registro de superhéroes. A pesar de sus errores, su legado como protector de la Tierra y como el genio que impulsó la tecnología en el universo de superhéroes es indiscutible. Su sacrificio en el clímax de la *Saga del Infinito* lo consolidó como uno de los héroes más grandes.
+                Iron Man ha desempeñado roles cruciales en numerosos eventos, incluyendo la Guerra Civil de Marvel, donde lideró el lado a favor del registro de superhéroes. A pesar de sus errores, su legado como protector de la Tierra y como el genio que impulsó la tecnología en el universo de superhéroes es indiscutible. Su sacrificio en el clímax de la Saga del Infinito lo consolidó como uno de los héroes más grandes.
             </p>
             <p>
                 Para más detalles, consulta la <a href="#">página de Los Vengadores</a>.
