--- a/ironman.html
+++ b/ironman.html
@@ -168,7 +168,7 @@ Quería crear un héroe que, en teoría, sería detestado por los jóvenes lecto
                 Iron Man ha desempeñado roles cruciales en numerosos eventos, incluyendo la Guerra Civil de Marvel, donde lideró el lado a favor del registro de superhéroes. A pesar de sus errores, su legado como protector de la Tierra y como el genio que impulsó la tecnología en el universo de superhéroes es indiscutible. Su sacrificio en el clímax de la Saga del Infinito lo consolidó como uno de los héroes más grandes.
             </p>
             <p>
-                Para más detalles, consulta la <a href="#">página de Los Vengadores</a>.
+                Para más detalles, consulta la <a href="https://marvel.fandom.com/es/wiki/P%C3%A1gina_principal">Wiki Marvel oficial</a>.
             </p>
         </section>
 
