--- a/spiderman.html
+++ b/spiderman.html
@@ -114,7 +114,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://static.wikia.nocookie.net/pure-good-wiki/images/3/3f/Amazing_Spider-Man_2_textless.jpg/revision/latest?cb=20250627230559">
+            <img src="https://preview.redd.it/the-amazing-spider-man-marvel-sony-2012-andrew-garfield-new-v0-37i0jrqb03oe1.jpeg?width=1080&crop=smart&auto=webp&s=b1f4916f8b75e7fb30c33f207ae5e77377eaae57">
             <p><strong>Nombre Real:</strong> Peter Benjamin Parker</p>
             <p><strong>Estatus:</strong> Héroe, Estudiante, Vigilante</p>
             <p><strong>Ocupación:</strong> Fotógrafo, Científico, Profesor, Vengador</p>
