--- a/spiderman.html
+++ b/spiderman.html
@@ -166,7 +166,7 @@
                 La vida personal de Peter es tan importante como su vida heroica. Sus relaciones con personajes como Mary Jane Watson, Gwen Stacy y su tía May han definido muchas de sus historias más emotivas y trágicas. Trabaja frecuentemente como fotógrafo para el Daily Bugle, lidiando constantemente con la difamación por parte de su jefe, J. Jonah Jameson.
             </p>
             <p>
-                ¿Quieres una ficha de un villano, como el Duende Verde o Doctor Octopus?
+                Para más detalles, consulta la <a href="https://marvel.fandom.com/es/wiki/P%C3%A1gina_principal">Wiki Marvel oficial</a>.
             </p>
         </section>
 
