--- a/cuatro_fantasticos.html
+++ b/cuatro_fantasticos.html
@@ -137,7 +137,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://preview.redd.it/the-official-new-logo-of-marvel-studios-the-fantastic-four-v0-e8dkcwn4tkic1.png?width=1769&format=png&auto=webp&s=e4bd370ca1ab06901dd6e013f61e9b34d73eeeee">
+            <img src="https://play-lh.googleusercontent.com/q65jRGxxI8RSgRUqcFS7Lx--NQ8IO3UHem0NxjqVVxyTorp4NKIqJ8eSYXofM6J3vaLsy-COuJMaU1INwpI">
             <p><strong>Líder:</strong> Reed Richards (Mr. Fantástico)</p>
             <p><strong>Base de Operaciones:</strong> Edificio Baxter, Ciudad de Nueva York</p>
             <p><strong>Naturaleza:</strong> Exploración científica y aventura</p>
@@ -151,7 +151,7 @@
                 Los Cuatro Fantásticos son la unidad familiar y aventurera de Marvel. El grupo nació de la ambición científica de Reed Richards, quien convenció a su amigo, el piloto Ben Grimm, y a su prometida, Sue Storm, junto a su hermano menor, Johnny Storm, para realizar un vuelo espacial experimental no autorizado.
             </p>
             <p>
-                Durante el viaje, la nave fue bombardeada por **rayos cósmicos**, alterando el ADN de la tripulación y otorgándoles habilidades únicas, convirtiéndolos en la primera generación de superhéroes de la "Edad de Plata" de Marvel.
+                Durante el viaje, la nave fue bombardeada por rayos cósmicos, alterando el ADN de la tripulación y otorgándoles habilidades únicas, convirtiéndolos en la primera generación de superhéroes de la "Edad de Plata" de Marvel.
             </p>
         </section>
 
@@ -191,7 +191,7 @@
         <section>
             <h2>Dato Curioso del Grupo</h2>
             <p>
-                Los Cuatro Fantásticos fueron creados en 1961 y su éxito fue tan inmediato que se considera el verdadero **inicio del Universo Marvel moderno**. Stan Lee y Jack Kirby les dieron una dinámica familiar que no existía en los cómics de superhéroes de la época, mostrando sus peleas domésticas y problemas financieros además de sus aventuras.
+                Los Cuatro Fantásticos fueron creados en 1961 y su éxito fue tan inmediato que se considera el verdadero inicio del Universo Marvel moderno. Stan Lee y Jack Kirby les dieron una dinámica familiar que no existía en los cómics de superhéroes de la época, mostrando sus peleas domésticas y problemas financieros además de sus aventuras.
             </p>
         </section>
 
