--- a/black_panter.html
+++ b/black_panter.html
@@ -109,7 +109,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>🐾 Black Panther 👑</h1>
+            <h1>Black Panther</h1>
             <p>El Rey de Wakanda</p>
         </header>
 
