--- a/capitan_america.html
+++ b/capitan_america.html
@@ -109,7 +109,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>🛡️ Capitán América </h1>
+            <h1>Capitán América</h1>
             <p>El Primer Vengador</p>
         </header>
 
