--- a/cuatro_fantasticos.html
+++ b/cuatro_fantasticos.html
@@ -132,7 +132,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>4️⃣ Los Cuatro Fantásticos</h1>
+            <h1>Los Cuatro Fantásticos</h1>
             <p>La Primera Familia de Marvel</p>
         </header>
 
