--- a/guardianes_galaxia.html
+++ b/guardianes_galaxia.html
@@ -132,7 +132,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>🌌 Los Guardianes de la Galaxia 🚀</h1>
+            <h1>Los Guardianes de la Galaxia</h1>
             <p>Un puñado de inadaptados... salvando el universo.</p>
         </header>
 
