--- a/hulk.html
+++ b/hulk.html
@@ -109,7 +109,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>☢️ Hulk 💚</h1>
+            <h1>Hulk</h1>
             <p>El Gigante Esmeralda</p>
         </header>
 
