--- a/ironman.html
+++ b/ironman.html
@@ -108,7 +108,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>⚙ Iron Man 🤖</h1>
+            <h1>Iron Man</h1>
             <p>El Invencible Vengador</p>
         </header>
 
