--- a/spiderman.html
+++ b/spiderman.html
@@ -109,7 +109,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>🕸️ Spider-Man 🕷️</h1>
+            <h1>Spider-Man</h1>
             <p>Tu Amigo y Vecino</p>
         </header>
 
