--- a/thanos.html
+++ b/thanos.html
@@ -113,7 +113,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>🌠 Thanos 🖐️</h1>
+            <h1>Thanos</h1>
             <p>El Titán Loco, Balanceador del Universo</p>
         </header>
 
