--- a/thor.html
+++ b/thor.html
@@ -109,7 +109,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>⚡ Thor 🔨</h1>
+            <h1>Thor</h1>
             <p>Dios Asgardiano del Trueno</p>
         </header>
 
