--- a/xmen.html
+++ b/xmen.html
@@ -132,7 +132,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>❌ Los X-Men: La Patrulla X 🧬</h1>
+            <h1>Los X-Men: La Patrulla X</h1>
             <p>Temidos por el mundo que han jurado proteger.</p>
         </header>
 
