--- a/loki.html
+++ b/loki.html
@@ -113,7 +113,7 @@
     <div class="wiki-container clearfix">
 
         <header>
-            <h1>🐍 Loki 👑</h1>
+            <h1>Loki</h1>
             <p>Dios de las Mentiras y el Engaño, Príncipe de Jotunheim</p>
         </header>
 
