--- a/hulk.html
+++ b/hulk.html
@@ -114,7 +114,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://static.wikia.nocookie.net/disney/images/b/b9/Profile_-_Hulk.jpg/revision/latest?cb=20210910150705&path-prefix=es">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Hulk_%282540708438%29.jpg/1200px-Hulk_%282540708438%29.jpg">
             <p><strong>Nombre Real:</strong> Dr. Robert Bruce Banner</p>
             <p><strong>Estatus:</strong> Héroe, Científico, Poder Ilimitado</p>
             <p><strong>Ocupación:</strong> Físico Nuclear, Aventurero, Fundador de Los Vengadores</p>
