--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <nav class="hidden md:flex space-x-8">
                 <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition duration-150 ease-in-out">Personajes</a>
                 <a href="#" class="text-gray-600 hover:text-red-600 font-medium transition duration-150 ease-in-out">Equipos</a>
-                <a href="#" class="text-gray-600 hover:text-red-600 font-medium transition duration-150 ease-in-out">Comics</a>
+                <a href="comics.html" class="text-gray-600 hover:text-red-600 font-medium transition duration-150 ease-in-out">Comics</a>
             </nav>
             <!-- Barra de Búsqueda -->
             <div class="hidden md:block">
