--- a/comics.html
+++ b/comics.html
@@ -99,9 +99,9 @@
     <header>
         <a href="#" class="logo">M-Wiki</a>
         <nav>
-            <a href="#">Personajes</a>
+            <a href="index.html">Personajes</a>
             <a href="#">Multiversos</a>
-            <a href="#">Comics</a>
+            <a href="comics.html">Comics</a>
         </nav>
         <input type="text" class="search-bar" placeholder="Buscar en M-Wiki...">
     </header>
@@ -191,4 +191,9 @@
         </div>
     </div>
 </body>
+<footer>
+    <p>
+        Para más detalles, consulta la <a href="https://marvel.fandom.com/es/wiki/P%C3%A1gina_principal">Wiki Marvel oficial</a>.
+    </p>
+</footer>
 </html>
