--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
             </nav>
             <!-- Barra de Búsqueda -->
             <div class="hidden md:block">
-    <form action="/buscar" method="GET">
-        <input type="search" 
+    <form action="https://www.google.com/search" method="GET" target="_blank">
+        <input type="hidden" name="sitesearch" value="lulo08.github.io/Pag.LJ"> <input type="search" 
                placeholder="Buscar en M-Wiki..." 
                name="q" 
                class="p-2 border border-gray-300 rounded-md focus:ring-red-500 focus:border-red-500 transition duration-150">
+        
         </form>
 </div>
         </div>
