--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Índice de Personajes Marvel - M-Wiki</title>
+    <title>MARVEL - M.Wiki</title>
+    <link rel="icon" type="image/png" href="https://image.pngaaa.com/786/2221786-middle.png">
     <!-- Carga de Tailwind CSS para estilos modernos y responsivos -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
