--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARVEL - M.Wiki</title>
-    <link rel="icon" type="image/png" href="https://image.pngaaa.com/786/2221786-middle.png">
+    <link rel="icon" type="image/png" href="icono marvel.png">
     <!-- Carga de Tailwind CSS para estilos modernos y responsivos -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
