--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARVEL - M.Wiki</title>
-    <link rel="icon" type="image/png" href="icono marvel.png">
+    <link rel="icon" type="image/png" href="logoposta.png">
     <!-- Carga de Tailwind CSS para estilos modernos y responsivos -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -70,7 +70,7 @@
 
             <!-- IRON MAN -->
             <a href="ironman.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/toni.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/ironcomic.png" 
                      alt="Iron Man" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
