--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <!-- IRON MAN -->
             <a href="ironman.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/ironcomic.png" 
+                <img src="https://lulo08.github.io/Pag.LJ/ironcomic.png" 
                      alt="Iron Man" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
