--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <!-- CAPITÁN AMÉRICA -->
             <a href="capitan_america.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/capitan.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/capitancomic.png" 
                      alt="Capitán América" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -94,7 +94,7 @@
 
             <!-- BLACK PANTER -->
             <a href="black_panter.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/pantera.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/blackcomic.png 
                      alt="Black Panter" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -106,7 +106,7 @@
             
              <!-- SPIDERMAN -->
             <a href="spiderman.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/spider.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/spidercomic.png" 
                      alt="Spiderman" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -118,7 +118,7 @@
 
              <!-- HULK -->
             <a href="hulk.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/hulk.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/hulkcomic.png" 
                      alt="Hulk" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -130,7 +130,7 @@
 
              <!-- THOR -->
             <a href="thor.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/thor.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/thorcomic.png" 
                      alt="Thor" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -176,7 +176,7 @@
             </a>
              <!-- LOKI -->
             <a href="loki.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/loki.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/lokicomic.png" 
                      alt="Loki" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -188,7 +188,7 @@
 
              <!-- THANOS -->
             <a href="thanos.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/thanos.jpg"
+                <img src="https://lulo08.github.io/Pag.LJ/img/thanoscomic.png"
                      alt="Thanos" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
@@ -200,7 +200,7 @@
 
              <!-- MAGNETO -->
             <a href="magneto.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/img/magneto.jpg" 
+                <img src="https://lulo08.github.io/Pag.LJ/img/magnetocomic.png" 
                      alt="Magneto" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
