--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <!-- BLACK PANTER -->
             <a href="black_panter.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
-                <img src="https://lulo08.github.io/Pag.LJ/bcomic.png 
+                <img src="https://lulo08.github.io/Pag.LJ/img/bcomic.png
                      alt="Black Panter" 
                      class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
