--- a/multiversos.html
+++ b/multiversos.html
@@ -1,135 +1,30 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Índice de Multiversos — M-Wiki</title>
-  <style>
-    /* Reset sencillo */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html,body { height: 100%; font-family: "Inter", "Segoe UI", Roboto, Arial, sans-serif; color:#222; background:#fafafa; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MARVEL - M.Wiki</title>
+    <link rel="icon" type="image/png" href="logoposta.png">
+    <!-- Carga de Tailwind CSS para estilos modernos y responsivos -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Configuraciones de fuente y colores base */
+        :root {
+            --marvel-red: #ED1D24;
+            --marvel-blue: #0078FF; /* Usado para enlaces */
+            --bg-light: #f9f9f9;
+        }
 
-    /* Cabecera */
-    .topbar {
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:18px 36px;
-      background:#fff;
-      border-bottom:1px solid #eee;
-      position:sticky;
-      top:0;
-      z-index:10;
-    }
-    .brand { display:flex; align-items:center; gap:14px; }
-    .brand h1 { font-size:20px; color:#e53935; margin:0; font-weight:700; letter-spacing:0.2px; }
-    .nav {
-      display:flex;
-      gap:18px;
-      align-items:center;
-      color:#555;
-      font-weight:600;
-    }
-    .search {
-      margin-left:24px;
-    }
-    .search input {
-      padding:10px 14px;
-      border-radius:6px;
-      border:1px solid #ddd;
-      min-width:240px;
-    }
-
-    /* Contenedor */
-    .container {
-      max-width:1200px;
-      margin:34px auto;
-      padding:0 28px 80px;
-    }
-
-    /* Título principal */
-    .page-title {
-      font-size:44px;
-      font-weight:800;
-      color:#111;
-      margin-bottom:6px;
-    }
-    .title-underline {
-      height:6px;
-      width:100%;
-      max-width:980px;
-      background:linear-gradient(90deg,#e53935 0,#e53935 100%);
-      margin:10px 0 20px 0;
-      border-radius:2px;
-    }
-    .intro {
-      color:#666;
-      margin-bottom:28px;
-      font-size:16px;
-      max-width:980px;
-    }
-
-    /* Grid de tarjetas */
-    .grid {
-      display:grid;
-      grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
-      gap:22px;
-    }
-
-    .card {
-      background:#fff;
-      border-radius:12px;
-      overflow:hidden;
-      box-shadow: 0 6px 18px rgba(20,20,20,0.06);
-      display:flex;
-      flex-direction:column;
-      min-height:260px;
-      transition: transform .18s ease, box-shadow .18s ease;
-    }
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 18px 36px rgba(20,20,20,0.12);
-    }
-    .card .media {
-      height:160px;
-      background-size:cover;
-      background-position:center;
-      flex-shrink:0;
-    }
-    .card .content {
-      padding:18px;
-      display:flex;
-      flex-direction:column;
-      justify-content:space-between;
-      gap:10px;
-    }
-    .card h3 {
-      font-size:22px;
-      margin:0;
-      color:#111;
-      font-weight:800;
-    }
-    .card p {
-      color:#666;
-      font-size:14px;
-      line-height:1.35;
-      margin:0;
-    }
-
-    /* Responsive tweaks */
-    @media (max-width:760px) {
-      .page-title { font-size:34px; }
-      .search input { min-width:140px; }
-      .card .media { height:140px; }
-    }
-
-    /* Small footer note */
-    .footer-note {
-      margin-top:28px;
-      color:#888;
-      font-size:13px;
-    }
-  </style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-light);
+        }
+        
+        /* Estilo para los títulos */
+        .title-separator {
+            border-color: var(--marvel-red);
+        }
+    </style>
 </head>
 <body>
   <header class="topbar">
