--- a/multiversos.html
+++ b/multiversos.html
@@ -31,8 +31,8 @@
     <div class="brand">
       <h1>M-Wiki</h1>
       <nav class="nav" aria-label="Navegación principal">
-        <a href="#" style="text-decoration:none;color:#444">Personajes</a>
-        <a href="#" style="text-decoration:none;color:#444;font-weight:800">Multiversos</a>
+        <a href="personajes.html" style="text-decoration:none;color:#444">Personajes</a>
+        <a href="multiversos.html" style="text-decoration:none;color:#444;font-weight:800">Multiversos</a>
         <a href="#" style="text-decoration:none;color:#444">Comics</a>
       </nav>
     </div>
@@ -51,88 +51,71 @@
     </p>
 
     <section class="grid" aria-label="Lista de Multiversos">
-      <!-- Card 1 -->
-      <article class="card" role="article" aria-labelledby="m-616">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%23f1c40f%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Tierra-616</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Universo principal de Marvel</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-616">Tierra-616</h3>
-          <p>La continuidad principal del Universo Marvel clásico: ahí ocurren la mayoría de los cómics tradicionales de Marvel.</p>
-        </div>
+      
+      <!-- Estas tarjetas ya están preparadas, puedes enlazarlas cuando tengas las páginas -->
+      <article class="card">
+        <a href="#" style="text-decoration:none;color:inherit;">
+          <div class="media" style="background:#f1c40f;"></div>
+          <div class="content">
+            <h3>Tierra-616</h3>
+            <p>Continuidad principal del Universo Marvel en los cómics.</p>
+          </div>
+        </a>
       </article>
 
-      <!-- Card 2 -->
-      <article class="card" role="article" aria-labelledby="m-1610">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%238e44ad%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%23ffffff%22>Tierra-1610</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%23ffffff%22>(Ultimate)</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-1610">Tierra-1610 (Ultimate)</h3>
-          <p>Reimaginación moderna de personajes y orígenes — historias más oscuras y contemporáneas que la continuidad clásica.</p>
-        </div>
+      <article class="card">
+        <a href="#" style="text-decoration:none;color:inherit;">
+          <div class="media" style="background:#8e44ad;"></div>
+          <div class="content">
+            <h3>Tierra-1610 (Ultimate)</h3>
+            <p>Línea moderna y más oscura que la continuidad clásica.</p>
+          </div>
+        </a>
       </article>
 
-      <!-- Card 3 -->
-      <article class="card" role="article" aria-labelledby="m-mcu">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%23349ef6%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%23fff%22>MCU</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%23fff%22>Marvel Cinematic Universe</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-mcu">MCU (Tierra-199999)</h3>
-          <p>Continuidad de las películas y series del Universo Cinematográfico Marvel; eventos y versiones adaptadas para cine y TV.</p>
-        </div>
+      <article class="card">
+        <a href="#" style="text-decoration:none;color:inherit;">
+          <div class="media" style="background:#3498db;"></div>
+          <div class="content">
+            <h3>MCU (Tierra-199999)</h3>
+            <p>Continuidad del cine y series del Universo Cinematográfico Marvel.</p>
+          </div>
+        </a>
       </article>
 
-      <!-- Card 4 -->
-      <article class="card" role="article" aria-labelledby="m-whatif">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%23ec7063%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%23fff%22>What If...?</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%23fff%22>Realidades alternativas</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-whatif">What If...?</h3>
-          <p>Historias que exploran cómo cambiarían eventos clave si hubieran ocurrido de forma distinta: ramificaciones y realidades alternativas.</p>
-        </div>
+      <article class="card">
+        <a href="#" style="text-decoration:none;color:inherit;">
+          <div class="media" style="background:#e74c3c;"></div>
+          <div class="content">
+            <h3>What If...?</h3>
+            <p>Realidades ramificadas que exploran decisiones alternativas.</p>
+          </div>
+        </a>
       </article>
 
-      <!-- Card 5 -->
-      <article class="card" role="article" aria-labelledby="m-spiderverse">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%2370c38f%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Spider-Verse</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Variantes arácnidas</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-spiderverse">Spider-Verse</h3>
-          <p>Multiverso donde coexisten múltiples versiones de Spider-Man/Spider-Women de realidades diferentes — encuentros entre variantes.</p>
-        </div>
+      <article class="card">
+        <a href="#" style="text-decoration:none;color:inherit;">
+          <div class="media" style="background:#2ecc71;"></div>
+          <div class="content">
+            <h3>Spider-Verse</h3>
+            <p>Multiverso con variantes de Spider-Man y Spider-Woman.</p>
+          </div>
+        </a>
       </article>
 
-      <!-- Card 6 -->
-      <article class="card" role="article" aria-labelledby="m-2149">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%23000000%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%23fff%22>Tierra-2149</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%23fff%22>Marvel Zombies</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-2149">Tierra-2149 (Marvel Zombies)</h3>
-          <p>Una plaga cósmica convierte a héroes y villanos en zombis: versiones macabras de los personajes que devoran su mundo.</p>
-        </div>
+      <article class="card">
+        <a href="#" style="text-decoration:none;color:inherit;">
+          <div class="media" style="background:#000;"></div>
+          <div class="content">
+            <h3>Tierra-2149</h3>
+            <p>Universo de Marvel Zombies.</p>
+          </div>
+        </a>
       </article>
 
-      <!-- Card 7 -->
-      <article class="card" role="article" aria-labelledby="m-2099">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%232ecc71%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Tierra-2099</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Marvel 2099</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-2099">Tierra-2099</h3>
-          <p>Futuro cibernético con versiones alternativas de héroes en una megaciudad distópica (la línea '2099' de Marvel).</p>
-        </div>
-      </article>
-
-      <!-- Card 8 -->
-      <article class="card" role="article" aria-labelledby="m-mm">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%23f39c12%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Multiverso de Fusión</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%230b0b0b%22>Versiones combinadas</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-mm">Multiverso de Fusión</h3>
-          <p>Realidades creadas por fusiones y cruces: mundos en los que se combinan personajes, historias y reglas de varias líneas temporales.</p>
-        </div>
-      </article>
-
-      <!-- Card 9 -->
-      <article class="card" role="article" aria-labelledby="m-otras">
-        <div class="media" style="background-image:url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22160%22><rect width=%22300%22 height=%22160%22 fill=%22%239e9e9e%22 rx=%2212%22 ry=%2212%22/><text x=%2216%22 y=%2292%22 font-size=%2226%22 font-family=%22Arial%22 fill=%22%23fff%22>Otras Tierras</text><text x=%2216%22 y=%22118%22 font-size=%2210%22 font-family=%22Arial%22 fill=%22%23fff%22>Infinitas variaciones</text></svg>');"></div>
-        <div class="content">
-          <h3 id="m-otras">Otras Tierras y Realidades</h3>
-          <p>Infinidad de mundos alternativos: desde realidades pequeñas hasta hoaxes cósmicos — cada una con su propia historia.</p>
-        </div>
-      </article>
     </section>
 
-    <p class="footer-note">Nota: haz clic en cualquier tarjeta para ver la ficha dedicada del multiverso (aún por implementar).</p>
+    <p class="footer-note">Haz clic en cualquier tarjeta para explorar el universo correspondiente.</p>
   </main>
 </body>
+</html>
